little touch-ups. Fix the Readme for TFS, and remove app.config, which is no longer used in lieu of the cropper.config file and IConfigurablePlugin.  Also, fixed some trace statements in the Imgur plugin.

--- a/Cropper.Plugins/TFSWorkItem/ReadMe.htm
+++ b/Cropper.Plugins/TFSWorkItem/ReadMe.htm
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
-	<head>
-		<title></title>
-	</head>
-	<body>
+        <head>
+                <title></title>
+        </head>
+        <body>
         <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
         <span><strong><span style="text-decoration: underline">Cropper TFS Work Item Plugin<br />
             <br />
@@ -13,13 +13,14 @@
             <span></span><strong><span style="text-decoration: underline"></span></strong></span>
         <span><strong><span style="text-decoration: underline">Requirements</span></strong><br />
             <br />
-            <span style="text-decoration: underline"></span>Microsoft Team Explorer.<br />
+            <span style="text-decoration: underline"></span>Microsoft Team Explorer 2008.<br />
             <br />
             <strong><span style="text-decoration: underline">Installation<br />
             </span>
                 <br />
             </strong></span>Copy the files to cropper plugins directory: <em>C:\Program Files\Fusion8Design\Cropper\plugins</em>.<br />
-        Copy the following files from the VisualStudio PrivateAssemblies folder to the plugins
+        Copy the following files from the VisualStudio PrivateAssemblies
+        folder (for example, <em>C:\Program Files\Microsoft Visual Studio 9.0\Common7\IDE\PrivateAssemblies\Microsoft.TeamFoundation.dll</em>) the plugins
         directory:<br />
         <ol>
             <li>Microsoft.TeamFoundation.WorkItemTracking.Controls.dll</li>
@@ -28,14 +29,19 @@
             <br />
         </span></strong>
         <ul>
-            <li>Open Cropper and select TFS Work Item from the Output menu.</li>
-            <li>For the first time the options dialog will appear. </li>
+            <li>Open Cropper and select <strong>TFS Work Item</strong> from the Output menu.</li>
+            <li>The first time you snap a screen shot with TFS selected
+            as the output, the TFS options dialog will appear. </li>
             <li>When capturing and image using Cropper a window with the default options will be
                 opened. After pressing OK the work item editor window will be opened with the captured
                 image as an attachment. </li>
-            <li>To open the options dialog when specified: "Do not show this dialog again" hold
-                the Shift key while selecting TFS Work Item from the Output menu.</li>
+            <li>To edit TFS  options at any other time, select the
+                "Options" menu choice from the Cropper popup menu.
+                Select the Plugins tab.  In the combo box, select the
+                TFS plugin. </li>
         </ul>
-	
-	</body>
+
+<P>Last updated: Sat, 04 Dec 2010  20:05
+</P>
+        </body>
 </html>
