implement the Send-to-Facebook plugin.

--- a/Cropper.Plugins/Readme.htm
+++ b/Cropper.Plugins/Readme.htm
@@ -1,5 +1,5 @@
 <html>
-  <!-- Last Saved: <2010-December-14 17:42:18> -->
+  <!-- Last Saved: <2010-December-15 14:41:32> -->
   <head>
 
     <title>Cropper Plugins v1.3</title>
@@ -100,7 +100,7 @@
   <!-- ======================================================= -->
 
   <body>
-    <h1>Cropper Plugins v1.3.2</h1>
+    <h1>Cropper Plugins v1.3.4</h1>
 
     <p>
       This is the Cropper Plugins v1.3 release. These plugins are
@@ -142,6 +142,7 @@
         sharing service. (new for v1.3.1)</li>
       <li>SendToPicasa - posts the screenshot on Google&#39;s <a href='http://picasaweb.google.com/'>Picasa
           photo sharing service</a>. (new for v1.3.2)</li>
+      <li>SendToFacebook - posts the screenshot to Facebook. (new for v1.3.3)</li>
     </ul>
 
     <h2>Installing the plugins</h2>
@@ -182,6 +183,10 @@
         CropperPlugins).  It uploads an image to the Picasa photo
         sharing service. </li>
 
+      <li>The Send-to-Picasa plugin is new (for v1.3.4 of
+        CropperPlugins).  It uploads an image and caption to Facebook.
+        </li>
+
       <li>The Send-to-TwitPic plugin is new (for v1.3.1).  It uploads an image to
         TwitPic, and then posts the image on
         your <a href='http://twitter.com'>Twitter feed</a>. Optionally
@@ -189,11 +194,11 @@
         the OAuth protocol for authentication without a username + password.
       </li>
 
-      <li>The Send-to-ImageShack plugin is new.</li>
+      <li>The Send-to-ImageShack plugin is new in v1.3.</li>
 
       <li>The Send-to-Imgur plugin has been updated to use the Imgur API.  The v1.2
         version of the plugin used HTML screen-scraping, and it broke when
-        Imgur changed their transaction flow. This version should be more reliable.</li>
+        Imgur changed their transaction flow. The v1.3 plugin should be more reliable.</li>
 
       <li> The Send-to-S3 plugin has been changed to store its settings in the
         cropper.config file, in the standard way, via the IConfigurablePlugin
