workitem 14947: Allow Picasa plugin to load properly even when Microsoft.Http.dll is not in the GAC.

--- a/Cropper.Plugins/Readme.htm
+++ b/Cropper.Plugins/Readme.htm
@@ -1,5 +1,5 @@
 <html>
-  <!-- Last Saved: <2010-December-22 20:42:01> -->
+  <!-- Last Saved: <2010-December-22 23:42:58> -->
   <head>
 
     <title>Cropper Plugins v1.3</title>
@@ -240,9 +240,11 @@
         in IConfigurablePlugin - which means the dialog is hosted in the
         tabbed UI presented by Cropper (core) under the "Options..."
         menu choice. New for v1.3.8, the plugin allows you to disable
-        the beep sound that signals the begin and end of capture. New for v1.3.9,
-        the plugin lets you configure a program to use to open the animated
-        gif after it is captured. This can be an editor or a viewer.</li>
+        the beep sound that signals the begin and end of capture. New
+        for v1.3.9, the plugin lets you configure a program to use to
+        open the animated gif after it is captured. This can be an
+        editor or a viewer. For an editor, I like the free Beneton Movie
+        Gif. </li>
 
       <li> The Send-to-Email plugin now allows you to choose the image format to
         use. Choices include BMP, JPG, and PNG. Previously you could only use
